--- a/src/lib/acorte_web/components/layouts/app.html.heex
+++ b/src/lib/acorte_web/components/layouts/app.html.heex
@@ -1,30 +1,47 @@
-<header class="px-4 sm:px-6 lg:px-8">
-  <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
-    <div class="flex items-center gap-4">
-      <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
-      </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v{Application.spec(:phoenix, :vsn)}
-      </p>
-    </div>
-    <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
-      </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
-      </a>
-      <a
-        href="https://hexdocs.pm/phoenix/overview.html"
-        class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
-      >
-        Get Started <span aria-hidden="true">&rarr;</span>
-      </a>
-    </div>
-  </div>
+<header class="sticky top-0 z-40 bg-white border-b">
+  <nav class="relative flex items-center gap-4 px-4 sm:px-6 lg:px-8 justify-end">
+    <%= if @current_user do %>
+      <navitem class="text-[0.8125rem] leading-6 text-zinc-900">
+        {@current_user.name}
+      </navitem>
+      <navitem>
+        <.link
+          href={~p"/users/settings"}
+          class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+        >
+          <.icon name="hero-cog-6-tooth-micro" />
+        </.link>
+      </navitem>
+      <navitem>
+        <.link
+          href={~p"/users/log_out"}
+          method="delete"
+          class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+        >
+          <.icon name="hero-arrow-right-start-on-rectangle-micro" />
+        </.link>
+      </navitem>
+    <% else %>
+      <navitem>
+        <.link
+          href={~p"/users/register"}
+          class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+        >
+          Register
+        </.link>
+      </navitem>
+      <navitem>
+        <.link
+          href={~p"/users/log_in"}
+          class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+        >
+          Log in
+        </.link>
+      </navitem>
+    <% end %>
+  </nav>
 </header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
+<main class="container mx-auto py-10 px-4">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     {@inner_content}
