:100: refatora occasions -> events

--- a/src/lib/acorte_web/controllers/event_html/event_form.html.heex
+++ b/src/lib/acorte_web/controllers/event_html/event_form.html.heex
@@ -5,6 +5,6 @@
   <.input field={f[:title]} type="text" label="Title" />
   <.input field={f[:description]} type="text" label="Description" />
   <:actions>
-    <.button>Save Occasion</.button>
+    <.button>Save Event</.button>
   </:actions>
 </.simple_form>
