--- a/src/lib/acorte_web/components/layouts/root.html.heex
+++ b/src/lib/acorte_web/components/layouts/root.html.heex
@@ -13,6 +13,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <%= Application.get_env(:live_debugger, :live_debugger_tags) %>
     <link
       href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
